# pytivo

./: .gitignore  CHANGELOG.md  README.md  TODO.txt  beacon.py  config.py  httpserver.py  lrucache.py  metadata.py  plugin.py  pyTivo.py  pyTivoService.py  pyproject.toml  pytivo_types.py  requirements-win.txt  requirements.txt  setup.cfg  setup.py  turing.py
plugins/music/: music.py
plugins/photo/: photo.py
plugins/settings/: buildhelp.py  settings.py
plugins/togo/: togo.py
plugins/video/: transcode.py  video.py
src/pytivo/: beacon.py  config.py  httpserver.py  lrucache.py  main.py  metadata.py  plugin.py  pyTivo.py  pyTivoService.py  turing.py
src/pytivo/plugins/music/: music.py
src/pytivo/plugins/photo/: photo.py
src/pytivo/plugins/settings/: buildhelp.py  settings.py
src/pytivo/plugins/togo/: togo.py
src/pytivo/plugins/video/: transcode.py  video.py
