[metadata]
name = pytivo
version = 0.3.0
author = Matthew A. Clapp
author_email = Matthew Clapp <itsayellow+dev@gmail.com>
description = TiVo HMO and GoBack server.  Used to serve videos and other media to a TiVo from a computer.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/itsayellow/pytivo
keywords = tivo, pytivo
classifiers =
    Development Status :: 3 Beta
    Natural Language :: English
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.6
install_requires =
    IMDbPY>=6.5
zip_safe = false

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pytivo= pytivo.pytivo.main:cli

[options.package_data]
* = help.txt, templates/*
